--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <!--Left box for logo-->
         <div class="left">
-            <img src="logo1.jpeg" alt="">
+            <img src="img/logo.jpg" alt="">
             <div>Fitness</div>
         </div>
         <div class="mid">
